--- a/chat-app/wrangler.jsonc
+++ b/chat-app/wrangler.jsonc
@@ -1,27 +1,18 @@
 ﻿{
-  // Schema reference for wrangler configuration
   "$schema": "node_modules/wrangler/config-schema.json",
-
-  // Name of your worker
   "name": "chat-app",
-
-  // Entry point for your worker
   "main": "src/worker.tsx",
-
-  // Compatibility settings
   "compatibility_date": "2025-08-21",
   "compatibility_flags": ["nodejs_compat"],
 
-  // Assets configuration
-  "assets": { "binding": "ASSETS" },
+  "assets": { 
+    "binding": "ASSETS",
+    "directory": "./dist/client"
+  },
 
-  // Observability settings
   "observability": { "enabled": true },
-
-  // Environment variables
   "vars": {},
 
-  // D1 database bindings
   "d1_databases": [
     {
       "binding": "chat_appd1",
