Endret scripts fra js til ts, endret path

--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -19,10 +19,9 @@
     "release": "rw-scripts ensure-deploy-env && npm run clean && npm run build && wrangler deploy",
     "generate": "rw-scripts ensure-env && wrangler types --include-runtime false",
     "migrate:generate": "drizzle-kit generate",
-    "migrate:apply:d1": "node ./scripts/run-migrate-d1.js",
+    "migrate:apply:d1": "tsx scripts/run-migrate-d1.ts",
     "seed": "tsx scripts/seed.ts",
-    "seed:demo": "node ./scripts/seed-demo.js",
-    "verify:tailwind": "node ./scripts/verify-tailwind.cjs",
+    "seed:demo": "tsx scripts/seed-demo.ts",
     "shadcn:init": "npx shadcn@latest init",
     "shadcn:add": "npx shadcn@latest add",
     "check": "npm run generate && npm run types",
@@ -52,6 +51,7 @@
     "@cloudflare/vite-plugin": "1.13.16",
     "@cloudflare/workers-types": "^4.20251014.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^24.9.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
