--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -18,6 +18,7 @@
     "clean:vite": "rm -rf ./node_modules/.vite",
     "release": "rw-scripts ensure-deploy-env && npm run clean && npm run build && wrangler deploy",
     "generate": "rw-scripts ensure-env && wrangler types --include-runtime false",
+    "migrate": "tsx scripts/run-migrate-d1.ts",
     "migrate:generate": "drizzle-kit generate",
     "migrate:apply:d1": "tsx scripts/run-migrate-d1.ts",
     "seed": "tsx scripts/seed.ts",
